infrastructure/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puqme
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: puq.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: puqme-web
                port:
                  number: 80
    - host: api.puq.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: puqme-api
                port:
                  number: 80
    - host: ws.puq.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: puqme-websocket
                port:
                  number: 80
